--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "projects/my-epic-app/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/my-epic-app/src/styles.scss"
             ],
             "scripts": []
@@ -92,6 +93,7 @@
               "projects/my-epic-app/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/my-epic-app/src/styles.scss"
             ],
             "scripts": []
@@ -123,7 +125,8 @@
           }
         }
       }
-    }},
+    }
+  },
   "cli": {
     "analytics": false
   },
